# modeldock

./: .gitignore  AGENT.md  Architecture.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Development.md  INSTRUCTIONS.md  PROJECT.MD  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check.yml  ci.yml  codeql.yml  congrats.yml  coverage.yml  deploy.yml  docs.yml  issue-claim.yml  release.yml
docs/: index.md  ollama-sdk.md
docs/architecture/: clean-architecture.md  errors.md  overview.md  ports.md  runtime-adapters.md
docs/contributing/: development.md  guidelines.md  new-runtime.md  testing.md
docs/getting-started/: first-model.md  installation.md  quickstart.md
docs/project/: changelog.md  license.md  roadmap.md  security.md  vision.md
docs/sdk/: cli.md  ollama.md  python-api.md
docs/stylesheets/: custom.css
docs/user-guide/: cache.md  configuration.md  discover.md  install.md  load.md  overview.md
src/modeldock/: __init__.py  __main__.py
src/modeldock/adapters/: __init__.py
src/modeldock/adapters/cache/: __init__.py  filesystem.py
src/modeldock/adapters/downloaders/: __init__.py  http.py  (+1 more)
src/modeldock/cli/: __init__.py  app.py  console.py
src/modeldock/common/: __init__.py  config.py  errors.py  http.py  logging.py  platform.py
src/modeldock/core/: __init__.py  cache.py  config.py  download.py  lifecycle.py  manager.py  registry.py
src/modeldock/data/: catalog.json
src/modeldock/domain/: __init__.py  alias.py  backend.py  capability.py  category.py  errors.py  model.py
src/modeldock/ports/: __init__.py  cache.py  downloader.py  events.py  progress.py  registry.py  runtime.py
tests/: __init__.py  conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_ollama.py
tests/unit/: test_cache.py  test_config.py  test_core.py  test_domain.py  test_lmstudio_runtime.py  test_logging.py  test_ollama_library.py  test_ollama_runtime.py  test_port_contract.py  test_registry.py  test_sdk_api.py
(+30 files in other folders)
