[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modeldock"
version = "0.1.0"
description = "Lightweight, Python-first model manager for local LLMs (the package manager for local AI models)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OpenAgentHQ" }]
keywords = ["llm", "models", "ollama", "local-ai", "model-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.5",
    "platformdirs>=4.0",
    "rich>=13.0",
    "tqdm>=4.66",
    "tomli>=2.0; python_version < '3.11'",
    "packaging>=23.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.1.8"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "pre-commit>=3.7",
]

[project.scripts]
modeldock = "modeldock.cli.app:main"

[project.entry-points."modeldock.runtimes"]
ollama = "modeldock.adapters.runtimes.ollama:OllamaRuntime"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["UP045", "UP006", "UP035", "B008", "SIM105"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a real/containerized runtime (e.g. Ollama)",
    "e2e: exercises the CLI end-to-end",
]
addopts = "-ra"
